# ntree_random_forests

./: .gitignore  README.md  guide.ipynb  pyproject.toml  requirements.txt
notebooks/: guide.ipynb
src/: ntree_gradient_boosting.py  ntree_random_forest.py  tune_rf_ntree.py
src/ntree_tuning/: __init__.py  _gb.py  _gb_classes.py  _gradboost.py  _randforest.py  _rf.py  _utils.py  ntree_gb_classes.py  ntree_rf_classes.py  tune_ntree_gb.py  tune_ntree_rf.py  tune_rf_ntree.py
tests/: test_import.py  test_ntree_tuning.py  test_ntrees_tuning.py
