[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ntree_tuning"
version = "0.1.0"
description = "A brief description of your package"
authors = [{ name = "Schalwal", email = "example@email.de" }]
dependencies = [
    "scikit-learn>=1.3.2",
    "scipy>=1.7.0",
    "numpy>=1.21.0"
]

[tool.pytest.ini_options]
pythonpath = [
  "./src"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]